# RL78-emulator

./: .gitignore  CMakeLists.txt
example_program/: DR5F10Y17.ld  build.bat  test.asm  test_link.ld
src/: cpu.c  cpu.h  instructions.c  instructions.h  main.c  regs.h
